--- a/src/feedback-screenshot.component.html
+++ b/src/feedback-screenshot.component.html
@@ -1,14 +1,18 @@
-<label class="btn btn-primary btn-block">
+<label [attr.class]="configuration.uploadButtonClass ? configuration.uploadButtonClass : 'btn btn-primary btn-block'">
   <span class="glyphicon glyphicon-open"></span>
   {{configuration.uploadButtonText ? configuration.uploadButtonText : "Upload"}}
   <input type="file" style="display: none" (change)="addScreenshot($event)">
 </label>
-<button class="btn btn-info btn-block" type="button" (click)="enterScreenshotMode()">
+<button [attr.class]="configuration.enterScreenshotModeButtonClass ? configuration.enterScreenshotModeButtonClass : 'btn btn-info btn-block'" type="button" (click)="enterScreenshotMode()">
   <span class="glyphicon glyphicon-camera" aria-hidden="true"></span>
   {{configuration.enterScreenshotModeButtonText ? configuration.enterScreenshotModeButtonText : "Take Screenshot"}}
 </button>
-<div *ngFor="let screenshot of screenshots; let id = index" class="feedback-screenshot">
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="remove(id)"><span aria-hidden="true">&times;</span></button>
+<div *ngFor="let screenshot of screenshots; let id = index" [attr.class]="configuration.screenshotEmbedClass ? configuration.screenshotEmbedClass : 'feedback-screenshot'">
+  <button [attr.class]="configuration.screenshotEmbedRemoveButtonClass ? configuration.screenshotEmbedRemoveButtonClass : 'close'"
+          data-dismiss="modal" aria-label="Close" type="button"
+          (click)="remove(id)">
+    <span aria-hidden="true">&times;</span>
+  </button>
   <img *ngIf="screenshot" [src]="screenshot" alt="{{id}}"/>
 </div>
 
